# PyRoblox

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyroblox/: __init__.py  _endpoints.py  client.py  exceptions.py  pagination.py
src/pyroblox/api/: __init__.py  avatar.py  badges.py  catalog.py  friends.py  games.py  groups.py  inventory.py  thumbnails.py  users.py
src/pyroblox/contrib/: __init__.py  dataframes.py  edgelists.py
src/pyroblox/models/: __init__.py  avatar.py  badges.py  base.py  catalog.py  friends.py  games.py  groups.py  inventory.py  thumbnails.py  users.py
tests/: conftest.py  test_avatar.py  test_badges.py  test_catalog.py  test_client.py  test_edgelists.py  test_friends.py  test_games.py  test_games_extended.py  test_groups.py  test_inventory.py  test_models.py  test_pagination.py  test_thumbnails.py  test_users.py
