[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyroblox"
version = "2.0.0a1"
description = "Python wrapper for the Roblox API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
analysis = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.34",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyroblox"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_robloxwrapper.py"
